[gd_scene load_steps=2 format=3 uid="uid://nxyph4kpaumk"]

[ext_resource type="Script" uid="uid://cxx35tuqp8d3g" path="res://scripts/ui/menus/pause_menu.gd" id="1_5p30d"]

[node name="Panel" type="Panel" groups=["ui_options_menu"]]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5p30d")

[node name="PauseMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -33.0
offset_right = 50.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="PauseMenu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "ResumeOption"

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/VBoxContainer"]
layout_mode = 2

[node name="Language" type="Label" parent="PauseMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Language:"

[node name="LangOptBtn" type="OptionButton" parent="PauseMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Italiano"
popup/item_0/id = 0
popup/item_1/text = "English"
popup/item_1/id = 1

[node name="Quit" type="Button" parent="PauseMenu"]
layout_mode = 2
text = "QuitOption"

[connection signal="pressed" from="PauseMenu/Resume" to="." method="_on_resume_pressed"]
[connection signal="item_selected" from="PauseMenu/VBoxContainer/HBoxContainer/LangOptBtn" to="." method="_on_lang_opt_btn_item_selected"]
[connection signal="pressed" from="PauseMenu/Quit" to="." method="_on_quit_pressed"]
